# cellular_automata_rust

./: .bumpversion.cfg  .gitignore  Cargo.toml  README.md  _build_rust.sh  build_and_run.py  build_rust.py  gui_interface.py  pydemo.py  pydemo_pyo3.py  run_iteration.py  run_model.py  setup.py
cellular_automata_py/: run_iteration.py
scripts/: _build_rust.sh  _test_rust.sh  build_rust.py  test_rust.py
src/: alt_lib.rs  lib.rs  main.rs  run_model.rs
src/process_runner/: example_processes.rs  example_state.rs  mod.rs  network.rs  process.rs  run.rs  state.rs
src/process_runner/cells/: mod.rs  run.rs  state.rs
src/process_runner/examples/: example_processes.rs  example_state.rs  mod.rs
src/process_runner/global/: mod.rs  run.rs  state.rs
src/py_interface/: cell_state.rs  example_run.rs  examples.rs  global_state.rs  mod.rs  run.rs
