[package]
name = "cellular_automata"
version = "0.2.2"
authors = ["sam_bland <sbland.co.uk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo = "0.16.0"
num = "0.3"

[lib]
name = "cellular_automata"
crate-type = ["cdylib", "lib"]


[dependencies.pyo3]
version = "0.12.4"


[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]